# Workout-Analysis

./: README.md  analyse.xlsx  analysis Suivi-Gainz.ipynb  pyproject.toml  suivi gainz (1).xlsx  test.xlsx  test_un_exo.xlsx  to_analyse.xlsx
.ipynb_checkpoints/: analysis Suivi-Gainz-checkpoint.ipynb
data training/: suivi gainz (1).xlsx  suivi gainz - pull prog 37-41.csv  suivi_gainz.xlsx  ~$suivi gainz (1).xlsx
src/training_analysis/: __init__.py
