[project]
name = "training-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander MacL", email = "maclennanalexander@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "google-auth>=2.35.0",
    "pandas>=2.2.3",
    "polar>=0.0.127",
    "google-api-python-client>=2.149.0",
    "gdown>=5.2.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/training_analysis"]
